Вроде исправил ошибки, начинаю делать аннотации