@@ -6,7 +6,6 @@ import by.itacademy.transport.Transport;
 import java.util.List;
 import java.util.function.Predicate;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 public class ListDelimiter implements Delimiter {
     private static final Predicate<String> PATTERN_RIGHT_VEHICLE = Pattern.compile("^[a-zA-Z]((\s|-)?[a-zA-Z0-9])*$").asPredicate();
@@ -14,25 +13,23 @@ public class ListDelimiter implements Delimiter {
     @Override
     public final List<Transport> divideListToRightTransportlis(final List<Transport> transportList) {
         return transportList.stream()
-                .filter(transport -> isValid(transport))
-                .collect(Collectors.toList());
+                .filter(ListDelimiter::isValid)
+                .toList();
     }
 
     @Override
-    public final List<Transport> divideListToWrongTransportlis(List<Transport> transportList) {
+    public final List<Transport> divideListToWrongTransportlis(final List<Transport> transportList) {
         return transportList.stream()
-                .filter(transport -> isInvalid(transport))
-                .collect(Collectors.toList());
+                .filter(ListDelimiter::inValid)
+                .toList();
     }
 
     private static boolean isValid(final Transport transport) {
         return PATTERN_RIGHT_VEHICLE.test(transport.getTransoprtName());
     }
 
-    private static boolean isInvalid(final Transport transport) {
-        if (PATTERN_RIGHT_VEHICLE.test(transport.getTransoprtName())) {
-            return false;
-        } else return true;
+    private static boolean inValid(final Transport transport) {
+        return PATTERN_RIGHT_VEHICLE.negate().test(transport.getTransoprtName());
     }
 }
 
